<resources>
    <string name="app_name">Tandil Recicla</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_clean_points">Clean points</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="action_sign_up">Register</string>

    <string name="viewGithub">View on GitHub</string>
    <string name="reportProblem">Problem Report</string>
    <string name="viewWebsite">Developer Website</string>
    <string name="actionSave">Save to Gallery</string>

    <string name="animateX">Animate X</string>
    <string name="animateY">Animate Y</string>
    <string name="animateXY">Animate XY</string>

    <string name="actionToggleValues">Toggle Values</string>
    <string name="actionToggleYValues">Toggle Y-Values</string>
    <string name="actionToggleXValues">Toggle X-Values</string>

    <string name="actionToggleIcons">Toggle Icons</string>
    <string name="actionToggleHighlight">Toggle Highlight</string>
    <string name="actionTogglePinch">Toggle PinchZoom</string>
    <string name="actionToggleAutoScale">Toggle Auto Scale</string>

    <string name="actionToggleLineValues">Toggle Line Values</string>
    <string name="actionToggleBarValues">Toggle Bar Values</string>
    <string name="actionToggleBarBorders">Toggle Bar Borders</string>
    <string name="actionToggleFilled">Toggle Filled</string>
    <string name="actionToggleCircles">Toggle Circles</string>
    <string name="actionToggleCandleShadow">Toggle Shadow Color</string>

    <string name="actionToggleCubic">Toggle Cubic</string>
    <string name="actionToggleStepped">Toggle Stepped</string>
    <string name="actionToggleHorizontalCubic">Toggle Horizontal Cubic</string>

    <string name="actionAddEntry">Add Entry</string>
    <string name="actionFeedMultiple">Add Multiple</string>
    <string name="actionRemoveEntry">Remove Entry</string>
    <string name="actionAddDataSet">Add Data Set</string>
    <string name="actionRemoveDataSet">Remove Data Set</string>
    <string name="actionClearChart">Clear chart</string>

    <string name="actionTogglePercent">Toggle Percent</string>
    <string name="actionToggleMinAngles">Toggle Minimum Angles</string>
    <string name="actionToggleHole">Toggle Hole</string>
    <string name="actionToggleCurvedSlices">Toggle Curved Slices</string>
    <string name="actionDrawCenterText">Draw Center Text</string>
    <string name="actionToggleHighlightCircle">Toggle Highlight Circle</string>
    <string name="actionToggleRotation">Toggle Rotation</string>
    <string name="actionToggleSpin">Spin Animation</string>

    <string name="dash">-</string>
    <string name="scrollViewStart">START OF SCROLLVIEW</string>
    <string name="scrollViewEnd">END OF SCROLLVIEW</string>

    <string name="activity_login_hint_first_name">First Name</string>
    <string name="activity_login_hint_email_or_username">Email or username</string>
    <string name="activity_login_hint_user_name">User Name</string>
    <string name="activity_login_hint_department">Department</string>
    <string name="activity_login_hint_number">Number</string>
    <string name="activity_login_hint_street_address">Street Address</string>
    <string name="activity_login_hint_last_name">Last Name</string>
    <string name="activity_login_hint_city">City</string>
    <string name="activity_login_hint_state">State</string>
    <string name="activity_login_hint_zip_code">Zip Code</string>
    <string name="activity_login_button_text_register">Register</string>
    <string name="activity_login_button_text_cancel">Cancel</string>
    <string name="activity_login_button_text_sign_in">Sign in</string>
    <string name="fragment_dashboard_text_discard">Discard</string>
    <string name="fragment_dashboard_text_recycle">Recycle</string>

    <string name="fragment_home_text_title">My recycling</string>
    <string name="fragment_dashboard_text_title">New recycling</string>
    <string name="fragment_clean_points_text_title">Recycling points</string>
    <string name="fragment_clean_points_text_schedule">Schedule \n Mondays to Saturday: 7 to 15hs \n Holidays: 9 to 13hs</string>
    <string name="layout_list_clean_points_item_preview_text">TextView</string>
    <string name="fragment_home_text_logout">Logout</string>
    <string name="activity_login_title_top">Tandil</string>
    <string name="activity_login_title_bottom">Recicla</string>
    <string name="layout_list_home_item_description">Description</string>
    <string name="layout_list_home_item_quantity">Quantity</string>
    <string name="layout_list_home_item_date">Date</string>
</resources>
